# rust-skeleton-starter

./: docker-compose.yml
api_server/: Cargo.toml
api_server/migrations/20210815133237_diesel_create_product/: up.sql
api_server/src/: domain.rs  main.rs  models.rs  schema.rs
api_server/src/domain/: hello.rs  world.rs
web/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
web/components/: Rust.vue
web/pages/: index.vue
